Animation added on banner component and also added video mute and unmute option

--- a/src/pages/Home/Banner/banner.css
+++ b/src/pages/Home/Banner/banner.css
@@ -33,3 +33,20 @@ video{
   font-optical-sizing: auto;
   font-style: normal;
 }
+
+/* Animation */
+
+@keyframes scaleUp {
+    from {
+      transform: scale(0.8);
+    }
+    to {
+      transform: scale(1);
+    }
+  }
+  
+  .scale-animation {
+    animation: scaleUp 1.5s ease-out infinite;
+  }
+  
+  
